# mytetra_dev

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.txt
app/: CMakeLists.txt
script/conan/: build_with_conan.run
tmp/: CMakeLists.txt
