project(mytetra)
cmake_minimum_required(VERSION 3.8.0)

set(HEADERS_FILES
        src/main.h
        src/views/recordTable/RecordTableScreen.h
        src/views/recordTable/RecordTableView.h
        src/views/record/RecordInfoFieldsEditor.h
        src/views/record/InfoFieldEnter.h
        src/views/record/MetaEditor.h
        src/libraries/wyedit/Editor.h
        src/libraries/wyedit/EditorConfig.h
        src/libraries/wyedit/EditorConfigDialog.h
        src/libraries/wyedit/EditorConfigFont.h
        src/libraries/wyedit/EditorConfigMisc.h
        src/libraries/wyedit/EditorFindDialog.h
        src/views/mainWindow/MainWindow.h
        src/views/printPreview/PrintPreview.h
        src/views/printPreview/PreviewView.h
        src/models/tree/XmlTree.h
        src/models/tree/TreeModel.h
        src/models/tree/TreeItem.h
        src/models/tree/KnowTreeModel.h
        src/models/recordTable/RecordTableData.h
        src/models/recordTable/RecordTableModel.h
        src/models/recordTable/RecordTableProxyModel.h
        src/models/appConfig/AppConfig.h
        src/views/record/AddNewRecord.h
        src/libraries/ClipboardRecords.h
        src/views/tree/TreeScreen.h
        src/views/findInBaseScreen/FindScreen.h
        src/views/findInBaseScreen/FindTableWidget.h
        src/views/appConfigWindow/AppConfigDialog.h
        src/views/appConfigWindow/ConfigDialog.h
        src/views/appConfigWindow/ConfigPage.h
        src/views/appConfigWindow/AppConfigPage_Main.h
        src/views/appConfigWindow/AppConfigPage_Misc.h
        src/views/appConfigWindow/AppConfigPage_Crypt.h
        src/views/appConfigWindow/AppConfigPage_Synchro.h
        src/views/appConfigWindow/AppConfigPage_RecordTable.h
        src/models/appConfig/AppConfigUpdater.h
        src/libraries/TrashMonitoring.h
        src/libraries/wyedit/EditorContextMenu.h
        src/libraries/wyedit/EditorTextArea.h
        src/libraries/wyedit/indentslider/IndentSlider.h
        src/libraries/wyedit/EditorSplitCellForm.h
        src/libraries/wyedit/EditorAbsTableCell.h
        src/libraries/wyedit/EditorAbsTable.h
        src/libraries/wyedit/EditorAddTableForm.h
        src/libraries/wyedit/EditorImageProperties.h
        src/libraries/wyedit/EditorMultiLineInputDialog.h
        src/libraries/FixedParameters.h
        src/libraries/WindowSwitcher.h
        src/libraries/wyedit/EditorShowText.h
        src/views/recordTable/RecordTablePrint.h
        src/models/recordTable/Record.h
        src/models/attachTable/Attach.h
        src/models/attachTable/AttachTableData.h
        src/models/attachTable/AttachTableModel.h
        src/views/attachTable/AttachTableView.h
        src/views/attachTable/AttachTableScreen.h
        src/controllers/attachTable/AttachTableController.h
        src/controllers/recordTable/RecordTableController.h
        src/views/dialog/ReduceMessageBox.h
        src/views/dialog/OverTextToolButton.h
        src/libraries/crypt/CryptService.h
        src/libraries/DiskHelper.h
        src/libraries/wyedit/EditorToolBar.h
        src/libraries/wyedit/formatters/TypefaceFormatter.h
        src/libraries/wyedit/formatters/Formatter.h
        src/libraries/wyedit/formatters/PlacementFormatter.h
        src/libraries/wyedit/formatters/ListFormatter.h
        src/libraries/wyedit/formatters/TableFormatter.h
        src/libraries/wyedit/formatters/ImageFormatter.h
        src/libraries/wyedit/EditorIndentSliderAssistant.h
        src/libraries/wyedit/EditorToolBarAssistant.h
        src/libraries/TraceLogger.h
        src/libraries/wyedit/formatters/ReferenceFormatter.h
        src/libraries/wyedit/EditorCursorPositionDetector.h
        src/libraries/Downloader.h
        src/views/actionLog/ActionLogScreen.h
        src/views/actionLog/ActionLogView.h
        src/controllers/actionLog/ActionLogController.h
        src/models/actionLog/ActionLogModel.h
        src/libraries/ActionLogger.h
        src/libraries/wyedit/EditorTablePropertiesForm.h
        src/views/appConfigWindow/AppConfigPage_Attach.h
        src/libraries/TimerMonitoring.h
        src/libraries/PreviewFileDialog.h
        src/libraries/IconSelectDialog.h
        src/libraries/PeriodicCheckBase.h
        src/libraries/PeriodicSyncro.h
        src/libraries/wyedit/EditorFontSizeComboBox.h
        src/libraries/wyedit/EditorFontFamilyComboBox.h
        src/libraries/wyedit/formatters/MathExpressionFormatter.h
        #---- QT_MAJOR_VERSION < Qt5 (пока закоментировал)
        #src/libraries/qtSingleApplication/qtsingleapplication.h
        #src/libraries/qtSingleApplication/qtlockedfile.h
        #src/libraries/qtSingleApplication/qtlocalpeer.h
        #src/libraries/qtSingleApplication/qtsinglecoreapplication.h
        #---- QT_MAJOR_VERSION >= Qt5
        src/libraries/qtSingleApplication5/qtsingleapplication.h
        src/libraries/qtSingleApplication5/qtlockedfile.h
        src/libraries/qtSingleApplication5/qtlocalpeer.h
        src/libraries/qtSingleApplication5/qtsinglecoreapplication.h
        #----
        src/libraries/ClipboardBranch.h
        src/libraries/GlobalParameters.h
        src/models/dataBaseConfig/DataBaseConfig.h
        src/views/enterPassword/EnterPassword.h
        src/views/consoleEmulator/ExecuteCommand.h
        src/views/consoleEmulator/ConsoleEmulator.h
        src/views/waitClock/WaitClock.h
        src/libraries/WalkHistory.h
        src/libraries/crypt/Pbkdf2Qt.h
        src/libraries/crypt/RC5Simple.h
        src/libraries/crypt/Password.h
        src/libraries/MtComboBox.h
        src/libraries/MtTableWidget.h
        src/views/tree/KnowTreeView.h
        src/libraries/MtStyledItemDelegate.h
        )

set(SOURCES_FILES
        src/main.cpp
        src/views/recordTable/RecordTableScreen.cpp
        src/views/recordTable/RecordTableView.cpp
        src/views/record/RecordInfoFieldsEditor.cpp
        src/views/record/InfoFieldEnter.cpp
        src/views/record/MetaEditor.cpp
        src/libraries/wyedit/Editor.cpp
        src/libraries/wyedit/EditorConfig.cpp
        src/libraries/wyedit/EditorConfigDialog.cpp
        src/libraries/wyedit/EditorConfigFont.cpp
        src/libraries/wyedit/EditorConfigMisc.cpp
        src/libraries/wyedit/EditorFindDialog.cpp
        src/views/mainWindow/MainWindow.cpp
        src/views/printPreview/PrintPreview.cpp
        src/views/printPreview/PreviewView.cpp
        src/models/tree/XmlTree.cpp
        src/models/tree/TreeModel.cpp
        src/models/tree/TreeItem.cpp
        src/models/tree/KnowTreeModel.cpp
        src/models/recordTable/RecordTableData.cpp
        src/models/recordTable/RecordTableModel.cpp
        src/models/recordTable/RecordTableProxyModel.cpp
        src/models/appConfig/AppConfig.cpp
        src/views/record/AddNewRecord.cpp
        src/libraries/ClipboardRecords.cpp
        src/views/tree/TreeScreen.cpp
        src/views/findInBaseScreen/FindScreen.cpp
        src/views/findInBaseScreen/FindTableWidget.cpp
        src/views/appConfigWindow/AppConfigDialog.cpp
        src/views/appConfigWindow/ConfigDialog.cpp
        src/views/appConfigWindow/ConfigPage.cpp
        src/views/appConfigWindow/AppConfigPage_Main.cpp
        src/views/appConfigWindow/AppConfigPage_Misc.cpp
        src/views/appConfigWindow/AppConfigPage_Crypt.cpp
        src/views/appConfigWindow/AppConfigPage_Synchro.cpp
        src/views/appConfigWindow/AppConfigPage_RecordTable.cpp
        src/models/appConfig/AppConfigUpdater.cpp
        src/libraries/TrashMonitoring.cpp
        src/libraries/wyedit/EditorContextMenu.cpp
        src/libraries/wyedit/EditorTextArea.cpp
        src/libraries/wyedit/indentslider/IndentSlider.cpp
        src/libraries/wyedit/EditorSplitCellForm.cpp
        src/libraries/wyedit/EditorAbsTableCell.cpp
        src/libraries/wyedit/EditorAbsTable.cpp
        src/libraries/wyedit/EditorAddTableForm.cpp
        src/libraries/wyedit/EditorImageProperties.cpp
        src/libraries/wyedit/EditorMultiLineInputDialog.cpp
        src/libraries/FixedParameters.cpp
        src/libraries/WindowSwitcher.cpp
        src/libraries/wyedit/EditorShowText.cpp
        src/views/recordTable/RecordTablePrint.cpp
        src/models/recordTable/Record.cpp
        src/models/attachTable/Attach.cpp
        src/models/attachTable/AttachTableData.cpp
        src/models/attachTable/AttachTableModel.cpp
        src/views/attachTable/AttachTableView.cpp
        src/views/attachTable/AttachTableScreen.cpp
        src/controllers/recordTable/RecordTableController.cpp
        src/controllers/attachTable/AttachTableController.cpp
        src/views/dialog/ReduceMessageBox.cpp
        src/views/dialog/OverTextToolButton.cpp
        src/libraries/crypt/CryptService.cpp
        src/libraries/DiskHelper.cpp
        src/libraries/wyedit/EditorToolBar.cpp
        src/libraries/wyedit/formatters/TypefaceFormatter.cpp
        src/libraries/wyedit/formatters/Formatter.cpp
        src/libraries/wyedit/formatters/PlacementFormatter.cpp
        src/libraries/wyedit/formatters/ListFormatter.cpp
        src/libraries/wyedit/formatters/TableFormatter.cpp
        src/libraries/wyedit/formatters/ImageFormatter.cpp
        src/libraries/wyedit/EditorIndentSliderAssistant.cpp
        src/libraries/wyedit/EditorToolBarAssistant.cpp
        src/libraries/TraceLogger.cpp
        src/libraries/wyedit/formatters/ReferenceFormatter.cpp
        src/libraries/wyedit/EditorCursorPositionDetector.cpp
        src/libraries/Downloader.cpp
        src/views/actionLog/ActionLogScreen.cpp
        src/views/actionLog/ActionLogView.cpp
        src/controllers/actionLog/ActionLogController.cpp
        src/models/actionLog/ActionLogModel.cpp
        src/libraries/ActionLogger.cpp
        src/libraries/wyedit/EditorTablePropertiesForm.cpp
        src/views/appConfigWindow/AppConfigPage_Attach.cpp
        src/libraries/TimerMonitoring.cpp
        src/libraries/PreviewFileDialog.cpp
        src/libraries/IconSelectDialog.cpp
        src/libraries/PeriodicCheckBase.cpp
        src/libraries/PeriodicSyncro.cpp
        src/libraries/wyedit/EditorFontSizeComboBox.cpp
        src/libraries/wyedit/EditorFontFamilyComboBox.cpp
        src/libraries/wyedit/formatters/MathExpressionFormatter.cpp
        #---- QT_MAJOR_VERSION < Qt5 (пока закоментировал)
        #src/libraries/qtSingleApplication/qtsingleapplication.cpp
        #src/libraries/qtSingleApplication/qtlockedfile.cpp
        #src/libraries/qtSingleApplication/qtlockedfile_unix.cpp
        #src/libraries/qtSingleApplication/qtlockedfile_win.cpp
        #src/libraries/qtSingleApplication/qtlocalpeer.cpp
        #src/libraries/qtSingleApplication/qtsinglecoreapplication.cpp
        #---- QT_MAJOR_VERSION >= Qt5
        src/libraries/qtSingleApplication5/qtsingleapplication.cpp
        src/libraries/qtSingleApplication5/qtlockedfile.cpp
        src/libraries/qtSingleApplication5/qtlockedfile_unix.cpp
        src/libraries/qtSingleApplication5/qtlockedfile_win.cpp
        src/libraries/qtSingleApplication5/qtlocalpeer.cpp
        src/libraries/qtSingleApplication5/qtsinglecoreapplication.cpp
        #----
        src/libraries/ClipboardBranch.cpp
        src/libraries/GlobalParameters.cpp
        src/models/dataBaseConfig/DataBaseConfig.cpp
        src/views/enterPassword/EnterPassword.cpp
        src/views/consoleEmulator/ExecuteCommand.cpp
        src/views/consoleEmulator/ConsoleEmulator.cpp
        src/views/waitClock/WaitClock.cpp
        src/libraries/WalkHistory.cpp
        src/libraries/crypt/Pbkdf2Qt.cpp
        src/libraries/crypt/RC5Simple.cpp
        src/libraries/crypt/Password.cpp
        src/libraries/MtComboBox.cpp
        src/libraries/MtTableWidget.cpp
        src/views/tree/KnowTreeView.cpp
        src/libraries/MtStyledItemDelegate.cpp
        )

add_executable(${PROJECT_NAME} WIN32
        ${HEADERS_FILES}
        ${SOURCES_FILES}
        )
target_link_libraries(${PROJECT_NAME}
        Qt5::Core
        Qt5::Widgets
        Qt5::Xml
        Qt5::Svg
        Qt5::Network
        Qt5::PrintSupport
        )
